<resources>
    <string name="app_name">TG2</string>
    <string name="current_time">Tempo Atual</string>
    <string name="action_settings">Definições</string>
    <string name="name_medicine">Nome Medicamento</string>
    <string name="icon_medicine">Ícone Medicamento</string>
    <string name="timing_to_take">Horário Toma</string>
    <string name="take_frequecy">Frequência Medicamento</string>
    <string name="add_medicine">Adicionar</string>
    <string name="medicine_in_plan">Medicamentos no Plano</string>
    <string name="previously_medicine_in_plan">Medicamentos Anteriormente no Plano</string>
    <string name="missed_medicine">Esquecido</string>
    <string name="taken_medicine">Tomado</string>
    <string name="medicine_name_1">Ibuprofeno</string>
    <string name="medicine_name_2">Clavamox</string>
    <string name="medicine_name_3">Kestine</string>

</resources>