<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Adicionar_Medicamentos">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="false"
        android:background="@null"
        android:cropToPadding="false"
        android:scaleX="2.5"
        android:scaleY="2.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_button" />

    <Button
        android:id="@+id/button"
        android:layout_width="88dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="Menu"
        android:background="@android:color/white"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider13"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <View
        android:id="@+id/divider14"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/divider13"
        tools:layout_editor_absoluteX="-16dp" />

    <View
        android:id="@+id/divider18"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/divider14"
        tools:layout_editor_absoluteX="1dp" />

    <View
        android:id="@+id/divider19"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/divider18"
        tools:layout_editor_absoluteX="0dp" />

    <View
        android:id="@+id/divider20"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="120dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/divider19" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FB0000"
        android:text="@string/add_medicine"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider20"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_medicine"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/divider14"
        app:layout_constraintTop_toBottomOf="@+id/divider13"
        tools:layout_editor_absoluteX="29dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_medicine"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/divider18"
        app:layout_constraintTop_toBottomOf="@+id/divider14"
        tools:layout_editor_absoluteX="29dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timing_to_take"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/divider19"
        app:layout_constraintTop_toBottomOf="@+id/divider18"
        tools:layout_editor_absoluteX="29dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_frequecy"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/divider20"
        app:layout_constraintTop_toBottomOf="@+id/divider19"
        tools:layout_editor_absoluteX="29dp" />

</androidx.constraintlayout.widget.ConstraintLayout>